package com.piturria.TasksWebApp;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class TasksWebAppApplication {

	public static void main(String[] args) {
		SpringApplication.run(TasksWebAppApplication.class, args);
	}

}
